[package]
name = "darwin-envd"
version = "0.1.0"
edition = "2024"
authors = [ "Michael van der Loo" ]
description = "Declaratively set environment variables in MacOS. Designed for parity with environment.d for Linux."

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.11.1"
